Fix image logo on mobile

--- a/packages/diffhtml-website/public/styles/index.css
+++ b/packages/diffhtml-website/public/styles/index.css
@@ -489,10 +489,6 @@ h1 a.github:hover {
     overflow-y: visible;
   }
 
-  layer#main header h1 img {
-    width: 76px;
-  }
-
   layer#main header p:last-child {
     display: none;
   }
